Fix alignment of input items

--- a/app/assets/stylesheets/api/create/create.scss
+++ b/app/assets/stylesheets/api/create/create.scss
@@ -41,7 +41,7 @@
 }
 
 .create-form-contents p span {
-  width: 25%;
+  min-width: 25%;
   border: none;
   font-size: 15px;
   font-weight: bold;
